@@ -67,6 +67,7 @@ Beta1 released
 * Fixed a deadlock when using multiple renders at the same time in Blender (issue #575)
 * Fixed a bug in the support for material .bumpsamplingdistance property
 * Fixed a discrepancy in reflected area lights on glossy surfaces between CPU and GPU rendering when light tracing is enabled (issue #470)
+* Avoid to return CUDA_ERROR_NO_DEVICE error if CUDA is installed but there are no NVIDIA GPUs installed
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
